--- a/WEB_2/Ripasso_Web1_Web2/Livello_1/5_input_focus.html
+++ b/WEB_2/Ripasso_Web1_Web2/Livello_1/5_input_focus.html
@@ -28,7 +28,7 @@ Risultato: campo evidenziato chiaramente mentre l’utente digita.  -->
 <body>
 
     <input type="text" placeholder="Inserisci il nome">
-    <input type="password" placeholder="Inserisci password">
+    <input type="password" placeholder="Inserisci la password">
 
 </body>
 </html>
